--- a/Resume/index.html
+++ b/Resume/index.html
@@ -28,7 +28,7 @@
     <tr>
         <td>EMAIL ADDRESS </td>
         <td>:</td>
-        <td>muhammedrifdhy8@gmail.com</td>
+        <td>rifcyberart@gmail.com</td>
     </tr>
     
 </table>
@@ -136,3 +136,4 @@ recent projects</li></ul>
 
 
 </body>
+
