--- a/Resume/index.html
+++ b/Resume/index.html
@@ -115,6 +115,7 @@ abilities, committed to delivering innovative solutions and enhancing
 user experience. Achieved 100% cross-browser compatibility 
 recent projects</li></ul>
 <hr>
+    <footer>
 <center>
     <div class="contact">
         <h3>Contact us</h3>
@@ -133,7 +134,8 @@ recent projects</li></ul>
     </nav>
     </div>
     </center>
-
+</footer>
 
 </body>
+
 
